--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	color: white;
-	background: url("/imgsf/showcase.webp") center center/cover;
+	background: url("./imgsf/showcase.webp") center center/cover;
 	background-color: rgba(0, 0, 0, 0.4);
 	background-blend-mode: color;
 }
