--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 		<!-- Showcase -->
 		<div id="showcase">
 			<div class="showcase-container">
-			  <img src="./imgsf/showcase.jpg">
 				<h2>Música para todos.</h2>
 				<p>
 					Milhões de músicas à sua escolha. E nem precisa de cartão de crédito.
@@ -204,7 +203,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	color: white;
-	background: url("./imgsf/showcase.webp") center center/cover;
+	background: url("/imgsf/showcase.webp") center center/cover;
 	background-color: rgba(0, 0, 0, 0.4);
 	background-blend-mode: color;
 }
